default regex mode as disabled

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,7 +15,7 @@
   </label>
 </div>
 <div class="usa-checkbox">
-  <input id="regex_mode" class="usa-checkbox__input" type="checkbox">
+  <input id="regex_mode" class="usa-checkbox__input" type="checkbox" disabled>
   <label class="usa-checkbox__label" for="regex_mode">
     Regex mode
   </label>
