separate json index for blog list

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,7 +8,7 @@
   aria-label="Case-insensitive search by title, content, or publish date"
   placeholder="Disabled ..."
   disabled>
-<div class="usa-checkbox">
+<div id="enable_search_div" class="usa-checkbox">
   <input id="enable_search" class="usa-checkbox__input" type="checkbox">
   <label class="usa-checkbox__label" for="enable_search">
     Enable search
