remove unnecessary role

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="usa-footer usa-footer--slim" role="contentinfo">
+<footer class="usa-footer usa-footer--slim">
   <div class="usa-footer__secondary-section" id="footer-main">
     <div class="grid-container">
       <div class="grid-row grid-gap">
