--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="usa-header usa-header--basic" role="banner">
+<header class="usa-header usa-header--basic">
   <div class="usa-nav-container">
     <div class="usa-navbar">
       <div class="usa-logo" id="basic-mega-logo">
@@ -9,7 +9,7 @@
       <button class="usa-menu-btn">Menu</button>
     </div>
 
-    <nav role="navigation" class="usa-nav">
+    <nav class="usa-nav">
       <button class="usa-nav__close">
         <img src="/img/close.svg" alt="close" />
       </button>
