--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,25 +2,32 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  
+
   <link rel="canonical" href="{{ .Permalink }}">
 
   {{ hugo.Generator }}
 
   <title>{{ .Title }} | {{ site.Title }}</title>
 
-  {{ $themeInitJs := resources.Get "js/uswds-init.js" 
-    | fingerprint 
+  {{ $themeInitJs := resources.Get "js/uswds-init.js"
+    | fingerprint
     | minify }}
   <script>{{ $themeInitJs.Content | safeJS }}</script>
 
-  {{ $themePurgedCss := resources.Get "css/uswds-purged.css" 
-    | fingerprint 
+  {{ if eq site.Params.use_purged_css true }}
+    {{ $themePurgedCss := resources.Get "css/uswds-purged.css"
+    | fingerprint
     | minify }}
-  <style>{{ $themePurgedCss.Content | safeCSS }}</style>
-  
-  {{ $customCss := resources.Get "css/custom.css" 
-    | fingerprint 
+    <style>{{ $themePurgedCss.Content | safeCSS }}</style>
+  {{ else }}
+    {{ $themeCss := resources.Get "css/uswds.css"
+    | fingerprint
+    | minify }}
+    <style>{{ $themeCss.Content | safeCSS }}</style>
+  {{ end }}
+
+  {{ $customCss := resources.Get "css/custom.css"
+    | fingerprint
     | minify }}
   <style>{{ $customCss.Content | safeCSS }}</style>
 </head>
