--- a/layouts/shortcodes/icon.html
+++ b/layouts/shortcodes/icon.html
@@ -1,5 +1,5 @@
 {{ $icon := .Get 0 }}
 
-<svg class="usa-icon" aria-hidden="true" focusable="false" role="img" style="vertical-align: middle">
+<svg class="usa-icon custom-icon" aria-hidden="true" focusable="false" role="img">
   <use xlink:href="/img/sprite.svg#{{ $icon }}"></use>
 </svg>
