--- a/layouts/partials/google-analytics.html
+++ b/layouts/partials/google-analytics.html
@@ -1,10 +1,14 @@
 {{ if not site.IsServer }}
-  {{ with site.GoogleAnalytics }}
+  {{ with site.Params.ga_measurement_id }}
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- https://developers.google.com/analytics/devguides/collection/gtagjs -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
   <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', '{{ . }}', 'auto');
-  ga('send', 'pageview');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', '{{ . }}');
   </script>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
   {{ end }}
 {{ end }}
